--- a/index.html
+++ b/index.html
@@ -727,9 +727,13 @@
                     <ul class = "wha-you-will-learn-list">
                         <li>Programming languages:</li> 
                         <ul class="inside-list-wywl">
-                            <li>You will become familiar with programming languages such as C++, C# and JavaScript, languages that are at the core of game programming.</li>
-                            <li>You will then learn how to plan and create small games – on your own as well as with your classmates.</li>
+                            <li>c++</li>
+                            <li>C#</li>
+                            <li>Javascript</li>
+                            
                         </ul>
+                        <li>Plan and Create Small Games</li>
+                        <li>Team Work</li>
                         <li>Strong analytical frame of mind.</li>
                     </ul>
     
