--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
                                 <p>82.0%</p>
                             </div>
                             <div class="average-salary">
-                                <h3>Average Salary: </h3>
+                                <a href="https://www.payscale.com/research/CA/Job=Video_Game_Programmer/Salary" target=_blank><h3>Average Salary: </h3></a>
                                 <p>C$57,512</p>
                             </div>
                         </div>
